--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
 	},
 	"dependencies": {
 		"await-notify": "1.0.1",
+		"jsdom": "^16.2.2",
+		"kotlin": "^1.3.61",
+		"node-localstorage": "^2.1.6",
 		"vscode-debugadapter": "1.40.0"
 	},
 	"devDependencies": {
