allow breakpoints for riscv source files

--- a/package.json
+++ b/package.json
@@ -59,6 +59,14 @@
 		"onCommand:extension.mock-debug.getProgramName"
 	],
 	"contributes": {
+		"languages": [
+			{
+				"id": "riscv",
+				"extensions": [".s", ".S"],
+				"aliases": ["RISC-V"],
+				"filenames": []
+			}
+		],
 		"breakpoints": [
 			{
 				"language": "riscv"
