variable view = register view

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,6 +4,7 @@
 		"target": "es6",
 
 		"allowJs": true,
+		"esModuleInterop": true,
 		"noImplicitAny": false,
 		"removeComments": false,
 		"noUnusedLocals": true,
