--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"await-notify": "1.0.1",
 		"jsdom": "^16.2.2",
 		"kotlin": "^1.3.61",
+		"lodash": "^4.17.15",
 		"node-localstorage": "^2.1.6",
 		"vscode-debugadapter": "1.40.0"
 	},
