--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	"engines": {
 		"vscode": "^1.43.0"
 	},
-	"icon": "images/mock-debug-icon.png",
+	"icon": "images/riscv-venus-icon.png",
 	"categories": [
 		"Debuggers"
 	],
