--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
 	"private": true,
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/hm-riscv/ vscode-venus-dap .git"
+		"url": "https://github.com/hm-riscv/vscode-venus-dap.git"
 	},
 	"bugs": {
-		"url": "https://github.com/hm-riscv/vscode-venus-dap /issues"
+		"url": "https://github.com/hm-riscv/vscode-venus-dap/issues"
 	},
 	"scripts": {
 		"prepublish": "tsc -p ./src",
@@ -59,19 +59,22 @@
 	"main": "./out/extension",
 	"activationEvents": [
 		"onDebug",
-		"onCommand:extension.mock-debug.getProgramName"
+		"onCommand:extension.riscv-venus.getProgramName"
 	],
 	"contributes": {
+		"configuration": {
+            "properties": {
+                "riscv-venus.enableCodeLens": {
+                    "type": "boolean",
+                    "default": true
+                }
+            }
+        },
 		"languages": [
 			{
-				"id": "riscv-venus",
-				"extensions": [
-					".s",
-					".S"
-				],
-				"aliases": [
-					"RISC-V Venus"
-				],
+				"id": "riscv",
+				"extensions": [".s", ".S"],
+				"aliases": ["RISC-V"],
 				"filenames": []
 			}
 		],
