--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,10 +28,15 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
+      - name: Rename vsix
+        run: mv .\*.vsix extension.vsix
       - name: Upload Release Asset
-        uses: shogo82148/actions-upload-release-asset@v1
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./*.vsix
+          asset_path: extension.vsix
           asset_name: vscode-riscv-venus_${{ github.ref }}.vsix
           asset_content_type: application/zip
