--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ name: Upload Release Asset
 jobs:
   build:
     name: Upload Release Asset
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-node@v1
       - name: Install dependencies
         run: npm install
-      - name: Build project # This would actually build your project, using zip for an example artifact
+      - name: Build project
         run: npm run package
       - name: Create Release
         id: create_release
@@ -29,7 +29,10 @@ jobs:
           draft: false
           prerelease: false
       - name: Rename vsix
-        run: mv .\*.vsix extension.vsix
+        run: mv *.vsix extension.vsix
+      - name: Get Tag
+        id: get_tag
+        run: echo ::set-output name=tag_version::${GITHUB_REF/refs\/tags\//}
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
@@ -38,5 +41,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: extension.vsix
-          asset_name: vscode-riscv-venus_${{ github.ref }}.vsix
+          asset_name: vscode-riscv-venus_${{ steps.get_tag.outputs.tag_version }}.vsix
           asset_content_type: application/zip
