--- a/package.json
+++ b/package.json
@@ -76,6 +76,30 @@
 				}
 			}
 		},
+		"viewsWelcome": [
+			{
+			  "view": "venusAssembly",
+			  "contents": "[Open Assembly](command:venusAssembly.openAssembly)"
+			}
+		],
+		"commands": [
+            {
+                "command": "venusAssembly.openAssembly",
+                "title": "Open",
+                "icon": {
+                    "light": "resources/light/add.svg",
+                    "dark": "resources/dark/add.svg"
+                }
+            }
+    	],
+		"views": {
+			"debug": [
+			  {
+				"id": "venusAssembly",
+				"name": "Venus Assembly"
+			  }
+			]
+		},
 		"languages": [
 			{
 				"id": "riscv",
