--- a/package.json
+++ b/package.json
@@ -135,6 +135,14 @@
 				}
 			},
 			{
+				"command": "riscv-venus.openRobotUI",
+				"title": "Venus: Open Robot UI",
+				"icon": {
+					"light": "images/light/three-bars.svg",
+					"dark": "images/dark/three-bars.svg"
+				}
+			},
+			{
 				"command": "riscv-venus.openMemory",
 				"title": "Venus: Open Memory",
 				"icon": {
