Add seven segment board
This is a fun interface, that captures user input via buttons and can
change LEDs and a seven segment display.

--- a/package.json
+++ b/package.json
@@ -143,6 +143,14 @@
 				}
 			},
 			{
+				"command": "riscv-venus.openSevenSegBoardUI",
+				"title": "Venus: Open Seven Segment Board UI",
+				"icon": {
+					"light": "images/light/three-bars.svg",
+					"dark": "images/dark/three-bars.svg"
+				}
+			},
+			{
 				"command": "riscv-venus.openMemory",
 				"title": "Venus: Open Memory",
 				"icon": {
