--- a/package.json
+++ b/package.json
@@ -42,25 +42,25 @@
 		"bufferutil": "^4.0.1",
 		"jsdom": "^16.4.0",
 		"kotlin": "^1.4.0",
-		"lodash": "^4.17.15",
+		"lodash": "^4.17.20",
 		"node-localstorage": "^2.1.6",
-		"typescript": "^3.9.5",
+		"typescript": "^4.0.2",
 		"utf-8-validate": "^5.0.2",
-		"vscode-debugadapter": "1.40.0"
+		"vscode-debugadapter": "1.41.1"
 	},
 	"devDependencies": {
-		"@types/mocha": "5.2.7",
-		"@types/node": "^14.0.13",
-		"@types/vscode": "^1.46.0",
-		"eslint": "7.2.0",
-		"grunt": "1.0.4",
-		"grunt-cli": "^1.2.0",
+		"@types/mocha": "8.0.3",
+		"@types/node": "^14.6.2",
+		"@types/vscode": "^1.48.0",
+		"eslint": "7.8.1",
+		"grunt": "1.3.0",
+		"grunt-cli": "^1.3.2",
 		"grunt-contrib-copy": "^1.0.0",
 		"grunt-exec": "^3.0.0",
-		"mocha": "6.2.0",
+		"mocha": "8.1.3",
 		"npx": "^10.2.2",
-		"vsce": "^1.76.1",
-		"vscode-debugadapter-testsupport": "1.40.3"
+		"vsce": "^1.79.5",
+		"vscode-debugadapter-testsupport": "1.41.0"
 	},
 	"main": "./out/extension",
 	"activationEvents": [
@@ -245,7 +245,11 @@
 								"default": [],
 								"items": {
 									"type": "string",
-									"enum": ["Robot", "LED Matrix", "Seven Segment Board"]
+									"enum": [
+										"Robot",
+										"LED Matrix",
+										"Seven Segment Board"
+									]
 								},
 								"uniqueItems": true
 							}
@@ -308,7 +312,11 @@
 							"name": "Launch with led",
 							"program": "^\"\\${file}\"",
 							"stopOnEntry": true,
-							"openViews": ["Robot", "LED Matrix", "Seven Segment Board"]
+							"openViews": [
+								"Robot",
+								"LED Matrix",
+								"Seven Segment Board"
+							]
 						}
 					}
 				],
