--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,8 +1,7 @@
-.vscode
-node_modules
-out/
-src/
-tsconfig.json
-webpack.config.js
-
-
+.vscode/**/*
+.gitignore
+.travis.yml
+appveyor.yml
+src/**/*
+out/tests/**/*
+**/*.js.map
