--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,7 +1,6 @@
 .vscode/**/*
 .gitignore
-.travis.yml
-appveyor.yml
-src/**/*
 out/tests/**/*
 **/*.js.map
+src/**/*
+!src/{ledmatrix,memoryui,robot,sevensegboard}/*{html,css,js}
