--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,5 +17,5 @@ jobs:
       run: npm install
     - name: Build venus
       run: npx grunt buildvenus
-    - name: Build and package
-      run: npm run package
+    - name: Build extension
+      run: npm run compile
