--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,9 @@ jobs:
         run: npm install
       - name: Build venus
         run: npx grunt buildvenus
-      - name: Build project
+      - name: Build extension
+        run: npm run compile
+      - name: Package extension
         run: npm run package
       - name: Create Release
         id: create_release
