--- a/package.json
+++ b/package.json
@@ -155,6 +155,14 @@
 					"light": "images/light/three-bars.svg",
 					"dark": "images/dark/three-bars.svg"
 				}
+			},
+			{
+				"command": "riscv-venus.openTerminal",
+				"title": "Venus: Open Terminal",
+				"icon": {
+					"light": "images/light/three-bars.svg",
+					"dark": "images/dark/three-bars.svg"
+				}
 			}
 		],
 		"views": {
