--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
 		"watch": "tsc -w -p ./src",
 		"test": "mocha -u tdd ./out/tests/",
 		"package": "vsce package",
-		"publish": "vsce publish"
+		"publish": "vsce publish",
+		"vscode:prepublish": "webpack --mode production",
+		"webpack": "webpack --mode development",
+		"webpack-dev": "webpack --mode development --watch"
 	},
 	"dependencies": {
 		"await-notify": "1.0.1",
@@ -44,8 +47,7 @@
 		"lodash": "^4.17.20",
 		"node-localstorage": "^2.1.6",
 		"typescript": "^4.0.2",
-		"utf-8-validate": "^5.0.2",
-		"vscode-debugadapter": "1.41.1"
+		"utf-8-validate": "^5.0.2"
 	},
 	"devDependencies": {
 		"@types/mocha": "8.0.3",
@@ -57,10 +59,14 @@
 		"grunt-contrib-copy": "^1.0.0",
 		"grunt-exec": "^3.0.0",
 		"mocha": "8.1.3",
+		"node-loader": "^1.0.2",
+		"ts-loader": "^8.0.11",
 		"vsce": "^1.79.5",
-		"vscode-debugadapter-testsupport": "1.41.0"
+		"vscode-debugadapter-testsupport": "1.41.0",
+		"webpack": "^5.9.0",
+		"webpack-cli": "^4.2.0"
 	},
-	"main": "./out/extension.js",
+	"main": "./dist/extension.js",
 	"activationEvents": [
 		"onDebug",
 		"onCommand:extension.riscv-venus.getProgramName",
@@ -264,7 +270,10 @@
 							},
 							"ledMatrixSize": {
 								"type": "object",
-								"default": {"x": 10, "y": 10},
+								"default": {
+									"x": 10,
+									"y": 10
+								},
 								"description": "The wanted Size of the Led Matrix. The parameter must be in the format: {\"x\": 10, \"y\": 10}"
 							}
 						}
