--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
 		"lodash": "^4.17.20",
 		"node-localstorage": "^2.1.6",
 		"typescript": "^4.0.2",
-		"utf-8-validate": "^5.0.2"
+		"utf-8-validate": "^5.0.2",
+		"vscode-debugadapter": "1.41.1"
 	},
 	"devDependencies": {
 		"@types/mocha": "8.0.3",
